got stashed files to pop

--- a/checker/lib/checker_web/templates/layout/app.html.eex
+++ b/checker/lib/checker_web/templates/layout/app.html.eex
@@ -9,7 +9,7 @@
     <script>
       window.userToken = "TODO" ;
     </script>
-    <title>Hello Checker!</title>
+    <title>Play Checkers!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
