--- a/checker/lib/checker_web/templates/page/index.html.eex
+++ b/checker/lib/checker_web/templates/page/index.html.eex
@@ -1,12 +1,20 @@
-<h1>Checker Game</h1>
+<br>
+<h1>Checkers</h1>
 
-<div class="row">
+<br>
+<img class="logo-icon" src="/images/checkers_icon.png">
+<br><br>
+<div class="row text-center">
   <div class="col">
-    <h1 id="index-page">Join a Game</h1>
-    Game Name:<br>
-    <input type="text" id="gameName">
-    <br>
-    <button onClick="location.href = '/game/'+(document.getElementById('gameName').value || 'demo');" id="join">Join</button>
-    <p><a href="/game/demo">Demo</a></p>
+    <h3 id="index-page">Join a Game</h3>
+
+
+<div class="chkr-centered input-group col-4">
+  <div class="input-group-prepend">
+    <span class="input-group-text" id="basic-addon3">Game name:</span>
   </div>
+  <input type="text" class="form-control" id="gameName">
 </div>
+<br>
+<button type="button"  onClick="location.href =
+     '/game/'+(document.getElementById('gameName').value || 'demo');" id="join"class="btn btn-dark btn-lg">Play</button>
