Finished front end

--- a/checker/assets/css/app.scss
+++ b/checker/assets/css/app.scss
@@ -9152,3 +9152,11 @@ h1 { text-align: center; }
   margin: 0 auto;
 }
 
+#viewer_list {
+  font-size: medium !important;
+  max-width: 7rem;
+}
+
+.viewer {
+  padding: 0.25rem !important;
+}
