--- a/checker/priv/static/css/app.css
+++ b/checker/priv/static/css/app.css
@@ -6332,6 +6332,13 @@ h1 {
   max-width: 31%;
   margin: 0 auto; }
 
+#viewer_list {
+  font-size: medium !important;
+  max-width: 7rem; }
+
+.viewer {
+  padding: 0.25rem !important; }
+
 
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
